--- a/Teleasis-website/Views/Pacient/GraficeRapoarteSupraveghetor.cshtml
+++ b/Teleasis-website/Views/Pacient/GraficeRapoarteSupraveghetor.cshtml
@@ -6,30 +6,13 @@
     <div class="formular formular-accesare">
         <div class="row">           
             <div class="col-1 col-md-1 col-sm-1 col-lg-1 div-logo">
-                <a href="@Url.Action("AcasaMedic", "Acasa", new{medic_id = @ViewBag.pacient.id_medic})"><img src="~/images/logo.svg"/></a>
+                <a href="@Url.Action("AcasaSupraveghetor", "Acasa", new{id_supraveghetor = @ViewBag.pacient.id_supraveghetor})"><img src="~/images/logo.svg"/></a>
             </div>
             <h1 class="text-center titlu-acasa col-10 titlu-accesare">Grafice si Rapoarte - @(ViewBag.pacient.nume_pacient) @(ViewBag.pacient.prenume_pacient)</h1>        
             <div class="div-buton col-1 col-md-1 col-sm-1 col-lg-1">
                 <a role="button" data-bs-toggle="modal"  data-bs-target="#logoutModal" class="btn btn-danger btn-circle "><i class="fa-solid fa-arrow-right-from-bracket"></i></a>
             </div>        
         </div>
-
-            
-            @*<fieldset>
-                <legend >Grafice:</legend>
-                <div class="row">
-                </div>
-            </fieldset>
-      
-   
-
-       </br> 
-        <fieldset>
-            <legend>Rapoarte:</legend>  
-            <div class="row">                                      
-            </div>
-    </fieldset>*@
-
      <ul class="nav nav-tabs row tabs-grafic-raport" role="tablist">
       <li class="nav-item col-6" role="presentation">
           <button class="nav-link active" id="grafice-tab" data-bs-toggle="tab" data-bs-target="#grafice" type="button" role="tab" aria-controls="grafice" aria-selected="true">Grafice</button>
