--- a/Teleasis-website/Views/Pacient/FisaPacient.cshtml
+++ b/Teleasis-website/Views/Pacient/FisaPacient.cshtml
@@ -32,6 +32,8 @@
                 <div class="row">
                     <input hidden id="input-id-medic-pacient" name="id_medic" value="@ViewBag.pacient.id_medic" />
                     <input hidden id="input-id-pacient" name="id_pacient" value="@ViewBag.pacient.id_pacient" />
+                    <input hidden id="input-id-pacient" name="id_supraveghetor" value="@ViewBag.pacient.id_supraveghetor" />
+                    <input hidden id="input-id-pacient" name="id_ingrijitor" value="@ViewBag.pacient.id_ingrijitor" />
                     
                        <div class="mb-3 col-5">
                         <label for="recipient-name" class="col-form-label">Nume:</label>
