--- a/Teleasis-website/Views/Pacient/GraficeRapoarte.cshtml
+++ b/Teleasis-website/Views/Pacient/GraficeRapoarte.cshtml
@@ -14,64 +14,10 @@
             </div>        
         </div>
 
-            
-            @*<fieldset>
-                <legend >Grafice:</legend>
-                <div class="row">
-                </div>
-            </fieldset>
-      
-   
 
-       </br> 
-        <fieldset>
-            <legend>Rapoarte:</legend>  
-            <div class="row">                                      
-            </div>
-    </fieldset>*@
+        <partial name="_GraficeRapoarte" /> 
 
-     <ul class="nav nav-tabs row tabs-grafic-raport" role="tablist">
-      <li class="nav-item col-6" role="presentation">
-          <button class="nav-link active" id="grafice-tab" data-bs-toggle="tab" data-bs-target="#grafice" type="button" role="tab" aria-controls="grafice" aria-selected="true">Grafice</button>
-      <li class="nav-item col-6" role="presentation">
-         <button class="nav-link" id="rapoarte-tab" data-bs-toggle="tab" data-bs-target="#rapoarte" type="button" role="tab" aria-controls="rapoarte" aria-selected="false">Rapoarte</button>
-    </ul>
-
-    <div class="tab-content">
-      <div id="grafice" class="tab-pane fade show active" role="tabpanel" aria-labelledby="grafice-tab">
-
-          <ul class="nav nav-tabs tabs-puls-mediu" role="tablist">
-              <li class="nav-item" role="presentation">
-                  <button class="nav-link active" id="graficPuls-tab" data-bs-toggle="tab" data-bs-target="#graficPuls" type="button" role="tab" aria-controls="graficPuls" aria-selected="true">Puls</button>
-              <li class="nav-item" role="presentation">
-                 <button class="nav-link" id="graficMediu-tab" data-bs-toggle="tab" data-bs-target="#graficMediu" type="button" role="tab" aria-controls="graficMediu" aria-selected="false">Valori Mediu</button>
-          </ul>
-
-        <div class="tab-content">
-            <div id="graficPuls" class="tab-pane fade show active" role="tabpanel" aria-labelledby="graficPuls-tab"> 
-                <canvas id="chartPuls" ></canvas>
-            </div>
-            <div id="graficMediu" class="tab-pane fade show" role="tabpanel" aria-labelledby="graficMediu-tab">        
-                <canvas id="chartMediu" ></canvas>
-            </div>
-        </div>
-      </div>
-      <div id="rapoarte" class="tab-pane fade" role="tabpanel" aria-labelledby="rapoarte-tab">
-
-        <div class="tab-content">
-            <div class="row">
-                <div class="col-6">
-                    <div id="myCalendarWrapper"></div>
-                </div>
-                <div class="col-6">
-                    <div id="dateCards"></div>
-                    <div id="faraDate"></div>
-                </div>
-            </div>
-        </div>
-      </div>
-
-    </div>
+     
 
 
      </div>
@@ -99,328 +45,4 @@
 
 </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.bundle.js"></script>
-<script>
-    function valoriPuls() {
-        var ctxL = document.getElementById("chartPuls").getContext('2d');
-        var myLineChart = new Chart(ctxL, {
-            type: 'line',
-            data: {
-                labels: @Html.Raw(ViewBag.datePuls),
-                datasets: [{
-                    label: "Evolutie ultimile 7 valori",
-                    data: @Html.Raw(ViewBag.valoriPuls),
-                    backgroundColor: [
-                        'rgba(105, 0, 132, .7)',
-                    ],
-                    borderColor: [
-                        'rgba(200, 99, 132, .7)',
-                    ],
-                    borderWidth: 2
-                }
-                ]
-            },
-            options: {
-                responsive: true
-            }
-        });
-    }
-    valoriPuls();
 
-     function valoriMediu() {
-        var ctxL = document.getElementById("chartMediu").getContext('2d');
-        var myLineChart = new Chart(ctxL, {
-            type: 'line',
-            data: {
-                labels: @Html.Raw(ViewBag.dateMediu),
-                datasets: [{
-                    label: "Ultimile 7 valori gaz",
-                    data: @Html.Raw(ViewBag.valoriGaz),
-                    backgroundColor: [
-                        'rgba(145, 227, 129, .7)',
-                    ],
-                    borderColor: [
-                        'rgba(66, 180, 43, .7)',
-                    ],
-                    borderWidth: 2
-                },
-                {
-                    hidden: true,
-                    label: "Ultimile 7 valori temperatură",
-                    data: @Html.Raw(ViewBag.valoriTemperatura),
-                    backgroundColor: [
-                        'rgba(105, 0, 132, .7)',
-                    ],
-                    borderColor: [
-                        'rgba(200, 99, 132, .7)',
-                    ],
-                    borderWidth: 2
-                },
-                {
-                    hidden: true,
-                    label: "Ultimile 7 valori umiditate",
-                    data: @Html.Raw(ViewBag.valoriUmiditate),
-                    backgroundColor: [
-                        'rgba(104, 124, 221, .7)',
-                    ],
-                    borderColor: [
-                        'rgba(48, 74, 206, .7)',
-                    ],
-                    borderWidth: 2
-                },
-                {
-                    hidden: true,
-                    label: "Ultimile 7 valori prezență",
-                    data: @Html.Raw(ViewBag.valoriPrezenta),
-                    backgroundColor: [
-                        'rgba(217, 198, 104, .7)',
-                    ],
-                    borderColor: [
-                        'rgba(188, 165, 51, .7)',
-                    ],
-                    borderWidth: 2
-                }
-                ]
-            },
-            options: {
-                responsive: true
-            }
-        });
-    }
-    valoriMediu();
-
-    const nextYear = new Date().getFullYear() + 1;
-
-    const myCalender = new CalendarPicker('#myCalendarWrapper', {
-
-        max: new Date(nextYear, 10)
-    });
-
-    var dateCards = document.getElementById("dateCards");
-    var faraDate = document.getElementById("faraDate");
-
-myCalender.onValueChange((currentValue) => {
-    dateCards.innerHTML="";
-    faraDate.innerHTML = "";
-    var listaValoriPuls = [];
-    var listaValoriMediu = [];
-    var datePuls = @Html.Raw(ViewBag.listaLipitePuls);
-    var dateMediu = @Html.Raw(ViewBag.listaLipiteMediu);
-    var an = currentValue.getFullYear();
-    var luna = currentValue.getMonth();
-    luna = parseInt(luna) + 1;
-    var zi = currentValue.getDate();
-    if(parseInt(luna) < 10){
-        luna = "0" + parseInt(luna);
-    }
-    if(parseInt(zi) < 10){
-        zi = "0" + parseInt(zi);
-    }
-    var dataSelectata = an + "-" + luna + "-" + zi;
-        if ((datePuls == null) && (dateMediu == null)) {
-            faraDate.style.display = "block";
-            var divCard = document.createElement("div");
-            divCard.classList.add("card");
-            divCard.classList.add("card-puls");
-
-            var divCardBody = document.createElement("div");
-            divCardBody.classList.add("card-body");
-            divCardBody.classList.add("row");
-
-            var divCardCol1 = document.createElement("div");
-            divCardCol1.classList.add("text-center");
-            divCardCol1.classList.add("align-self-center");
-
-            var h5Data = document.createElement("h5");
-            h5Data.classList.add("card-title");
-
-            var textDataText = document.createTextNode("Încă nu s-au înregistrat date!");
-            h5Data.appendChild(textDataText);
-
-            divCard.appendChild(divCardBody);
-            divCardBody.appendChild(divCardCol1);
-            divCardCol1.appendChild(h5Data);
-
-            faraDate.appendChild(divCard);
-
-        } else {
-            faraDate.style.display = "none";
-
-            datePuls.forEach(dp => {
-                var dataPuls = dp.split("#")[0];
-                var valoarePuls = dp.split("#")[1];
-                if (dataPuls === dataSelectata) {
-                    console.log(dataPuls + "**********")
-                    var element = dataPuls + "+" + valoarePuls;
-                    listaValoriPuls.push(element);
-                }
-            });
-
-            dateMediu.forEach(dm => {
-                var dataMediu = dm.split("#")[0];
-                var valoareGaz = dm.split("#")[1];
-                var valoareTemperatura = dm.split("#")[2];
-                var valoarePrezenta = dm.split("#")[3];
-                var valoareUmiditate = dm.split("#")[4];
-                if (dataMediu === dataSelectata) {
-                    var elementM = dataMediu + "+" + valoareGaz+ "+"+valoareTemperatura + "+" + valoarePrezenta + "+" + valoareUmiditate;
-                    listaValoriMediu.push(elementM);
-                }
-            });
-
-            if (listaValoriPuls.length === 0 && listaValoriMediu.length === 0) {
-                faraDate.style.display = "block";
-                var divCard = document.createElement("div");
-                divCard.classList.add("card");
-                divCard.classList.add("card-puls");
-
-                var divCardBody = document.createElement("div");
-                divCardBody.classList.add("card-body");
-                divCardBody.classList.add("row");
-
-                var divCardCol1 = document.createElement("div");
-                divCardCol1.classList.add("text-center");
-                divCardCol1.classList.add("align-self-center");
-
-                var h5Data = document.createElement("h5");
-                h5Data.classList.add("card-title");
-
-                var textDataText = document.createTextNode("Încă nu s-au înregistrat date!");
-                h5Data.appendChild(textDataText);
-
-                divCard.appendChild(divCardBody);
-                divCardBody.appendChild(divCardCol1);
-                divCardCol1.appendChild(h5Data);
-
-                faraDate.appendChild(divCard);
-
-            } else {
-                faraDate.style.display = "none";
-            }
-            listaValoriPuls.sort();
-            listaValoriMediu.sort();
-            listaValoriPuls.forEach(function callbackFn(element) {
-                var listaSplit = element.split("+");
-                var data = listaSplit[0];
-                var valoare = listaSplit[1];
-                
-                var divCard = document.createElement("div");
-                divCard.classList.add("card");
-                divCard.classList.add("card-puls");
-
-                var divCardBody = document.createElement("div");
-                divCardBody.classList.add("card-body");
-                divCardBody.classList.add("row");
-
-                var divCardCol1 = document.createElement("div");
-                divCardCol1.classList.add("text-center");
-                divCardCol1.classList.add("align-self-center");
-
-                var h5Data = document.createElement("h5");
-                h5Data.classList.add("card-title");
-
-                var h5Valoare = document.createElement("h5");
-                h5Valoare.classList.add("card-title");
-
-                var textDataText = document.createTextNode("Data: ");
-                h5Data.appendChild(textDataText);
-
-                var textData = document.createTextNode(data);
-                h5Data.appendChild(textData);
-
-                var textValoareText = document.createTextNode("Valoare puls: ");
-                h5Valoare.appendChild(textValoareText);
-
-                var textValoare = document.createTextNode(valoare);
-                h5Valoare.appendChild(textValoare);
-
-
-                divCard.appendChild(divCardBody);
-                divCardBody.appendChild(divCardCol1);
-                divCardCol1.appendChild(h5Data);
-                divCardCol1.appendChild(h5Valoare);
-                
-                dateCards.appendChild(divCard);
-
-            });
-
-            listaValoriMediu.forEach(function callbackFn(elementM) {
-                var listaSplit = elementM.split("+");
-                var data = listaSplit[0];
-                var valoareGaz = listaSplit[1];
-                var valoareTemperatura = listaSplit[2];
-                var valoarePrezenta = listaSplit[3];
-                var valoareUmiditate = listaSplit[4];
-                
-                var divCard = document.createElement("div");
-                divCard.classList.add("card");
-                divCard.classList.add("card-puls");
-
-                var divCardBody = document.createElement("div");
-                divCardBody.classList.add("card-body");
-                divCardBody.classList.add("row");
-
-                var divCardCol1 = document.createElement("div");
-                divCardCol1.classList.add("text-center");
-                divCardCol1.classList.add("align-self-center");
-
-                var h5Data = document.createElement("h5");
-                h5Data.classList.add("card-title");
-
-                var h5ValoareGaz = document.createElement("h5");
-                h5ValoareGaz.classList.add("card-title");
-
-                var h5ValoareTemperatura = document.createElement("h5");
-                h5ValoareTemperatura.classList.add("card-title");
-
-                var h5ValoarePrezenta = document.createElement("h5");
-                h5ValoarePrezenta.classList.add("card-title");
-
-                var h5ValoareUmiditate = document.createElement("h5");
-                h5ValoareUmiditate.classList.add("card-title");
-
-                var textDataText = document.createTextNode("Data: ");
-                h5Data.appendChild(textDataText);
-
-                var textData = document.createTextNode(data);
-                h5Data.appendChild(textData);
-
-                var textValoareGaz = document.createTextNode("Valoare gaz: ");
-                h5ValoareGaz.appendChild(textValoareGaz);
-
-                var textGaz = document.createTextNode(valoareGaz);
-                h5ValoareGaz.appendChild(textGaz);
-
-                var textValoareTemperatura = document.createTextNode("Valoare temperatura: ");
-                h5ValoareTemperatura.appendChild(textValoareTemperatura);
-
-                var textTemperatura = document.createTextNode(valoareTemperatura);
-                h5ValoareTemperatura.appendChild(textTemperatura);
-
-                var textValoarePrezenta = document.createTextNode("Prezenta: ");
-                h5ValoarePrezenta.appendChild(textValoarePrezenta);
-
-                var textPrezenta = document.createTextNode(valoarePrezenta);
-                h5ValoarePrezenta.appendChild(textPrezenta);
-
-                var textValoareUmiditate = document.createTextNode("Valoare umiditate: ");
-                h5ValoareUmiditate.appendChild(textValoareUmiditate);
-
-                var textUmiditate = document.createTextNode(valoareUmiditate);
-                h5ValoareUmiditate.appendChild(textUmiditate);
-
-
-                divCard.appendChild(divCardBody);
-                divCardBody.appendChild(divCardCol1);
-                divCardCol1.appendChild(h5Data);
-                divCardCol1.appendChild(h5ValoareGaz);
-                divCardCol1.appendChild(h5ValoareTemperatura);
-                divCardCol1.appendChild(h5ValoarePrezenta);
-                divCardCol1.appendChild(h5ValoareUmiditate);
-                
-                dateCards.appendChild(divCard);
-
-            });
-        }
-});
-</script>
