--- a/Teleasis-website/Views/Acasa/AcasaPacient.cshtml
+++ b/Teleasis-website/Views/Acasa/AcasaPacient.cshtml
@@ -1,19 +1,31 @@
 ﻿@{
-    ViewData["Title"] = "Grafice si Rapoarte";
+    ViewData["Title"] = "Pagina Acasa Pacient";
 }
 
 <div class="container-acasa" id="container-adaugare-pacienti">
     <div class="formular formular-accesare">
-        <div class="row">           
+        <div class="row">
             <div class="col-1 col-md-1 col-sm-1 col-lg-1 div-logo">
-                <a href="@Url.Action("AcasaSupraveghetor", "Acasa", new{id_supraveghetor = @ViewBag.pacient.id_supraveghetor})"><img src="~/images/logo.svg"/></a>
             </div>
-            <h1 class="text-center titlu-acasa col-10 titlu-accesare">Grafice si Rapoarte - @(ViewBag.pacient.nume_pacient) @(ViewBag.pacient.prenume_pacient)</h1>        
+            <h1 class="text-center titlu-acasa col-10 titlu-accesare">Pagină Acasă Pacient - @(ViewBag.pacient.nume_pacient) @(ViewBag.pacient.prenume_pacient)</h1>        
             <div class="div-buton col-1 col-md-1 col-sm-1 col-lg-1">
                 <a role="button" data-bs-toggle="modal"  data-bs-target="#logoutModal" class="btn btn-danger btn-circle "><i class="fa-solid fa-arrow-right-from-bracket"></i></a>
-            </div>        
+            </div>
         </div>
-             <partial name="_GraficeRapoarte" /> 
+      
+        
+
+        <div class="modal-footer butoane_adauga_pacient butoane_accesare_pacient">
+             <button class="btn btn-primary buton-adauga buton-accesare" type="button" onclick="location.href='@Url.Action("FisaPacientPacient","Pacient",new { id_pacient = @ViewBag.pacient.id_pacient })'">Vizualizare fișă</button>
+             <button class="btn btn-primary buton-adauga buton-accesare" type="button" onclick="location.href='@Url.Action("RecomandariPacient","Pacient",new { id_pacient = @ViewBag.pacient.id_pacient})'">Vizualizare recomandări</button>
+             <button class="btn btn-primary buton-adauga buton-accesare" type="button" onclick="location.href='@Url.Action("IstoricValoriPacient","Pacient",new { id_pacient = @ViewBag.pacient.id_pacient })'">Istoric valori</button>
+             <button class="btn btn-primary buton-adauga buton-accesare" type="button" onclick="location.href='@Url.Action("GraficeRapoartePacient","Pacient",new { id_pacient = @ViewBag.pacient.id_pacient })'">Vizualizare grafice/rapoarte</button>
+             <button class="btn btn-primary buton-adauga buton-accesare" type="button" onclick="location.href='@Url.Action("VizualizareAlarmePacient","Pacient",new { id_pacient = @ViewBag.pacient.id_pacient, id_supraveghetor = @ViewBag.pacient.id_supraveghetor })'">Istoric alarme</button>
+
+        </div>
+
+
+
 
     </div>
 
@@ -38,5 +50,14 @@
             </div>
         </div>
 
+         
+
+          
+
 </div>
 
+<script>
+
+
+
+</script>
